vpc/sg.tf
resource "aws_security_group" "linux-ssh" {
  name        = "allow_ssh"
  description = "sandard linux to allow ssh"
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "elc-redis" {
  name        = "allow_elc"
  description = "elc redis"
  vpc_id      = "${aws_vpc.main.id}"

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

output "security_groups_elc-redis" {
  value = "${aws_security_group.elc-redis.id}"
}

output "security_groups" {
  value = "${data.aws_security_group.linux-ssh.id}"
}
